--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -9,7 +9,7 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-dashboard" aria-hidden="true"></span> DashBoard
             </NavLink>
         </li>
 
@@ -21,6 +21,11 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="expenses">
                 <span class="oi oi-dollar" aria-hidden="true"></span>Expense
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="about">
+                <span class="oi oi-info" aria-hidden="true"></span>About
             </NavLink>
         </li>
 
