--- a/Client/Component/PieChart.razor
+++ b/Client/Component/PieChart.razor
@@ -1,7 +1,7 @@
 ﻿@using Finance.Client.Services;
 
 <div>
-    <div style="margin-top: 15px; margin-right: 90px; text-align: center;"><b>@Data.Label</b></div>
+    <div style="margin-top: auto; margin-right:auto; text-align: center;"><b>@Data.Label</b></div>
     <RadzenChart>
         <RadzenPieSeries Fills="@Colors"
                          Data="@Data.Data"
