--- a/Client/Pages/Earnings.razor
+++ b/Client/Pages/Earnings.razor
@@ -12,7 +12,7 @@
                 Earnings
             </div>
             <div class="card-body">
-                <table class="table table-striped">
+                <table class="table table-responsive-sm">
                     <thead>
                         <tr>
                             <th>Date</th>
@@ -53,6 +53,5 @@
 @if (DeleteDialogOpen)
 {
     <ModelDialog Title="Are you sure?" Text="Do you want to delete this entry?" OnClose="@OnDeleteDialogClose" DialogType="ModelDialog.ModelDialogType.DeleteCancel"> </ModelDialog>
-
-   
+  
 }
