--- a/Client/Pages/Expenses.razor
+++ b/Client/Pages/Expenses.razor
@@ -12,7 +12,7 @@
                 Expense
             </div>
             <div class="card-body">
-                <table class="table table-striped">
+                <table class="table table-responsive-sm">
                     <thead>
                         <tr>
                             <th>Date</th>
